[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["davetpj <dhkim92@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
matplotlib = "^3.6.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
